frontend/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
