frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sharma92/godaampe:285f7a04fc71be698f284267ee018d978f8673b3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: NodePort # or LoadBalancer if you’re on cloud
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
