frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godaampe-ingress
  namespace: godaampe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.godaampe.com
    http:
      paths:
      - path: /user-api
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5000
      - path: /store-api
        pathType: Prefix
        backend:
          service:
            name: store-service
            port:
              number: 5000
      - path: /product-api
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5000
  - host: marry-fifty-rocky.ngrok-free.dev   # add your ngrok hostname here
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
